tuto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-tuto
  labels:
    app: deployment-tuto
spec:
  replicas: 2 # pod数を指定している
  selector:
    matchLabels:
      app: deployment-tuto
  template:
    metadata:
      labels:
        app: deployment-tuto
    spec:
      containers:
        - name: nginx
          image: tuto-nginx:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
        - name: vue
          image: tuto-vue:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
