tuto-pod.yaml
apiVersion: apps/v1
kind: Pod
metadata:
  name: pod-tuto
spec:
  containers:
    - name: tuto-nginx
      image: "tuto-nginx"
      imagePullPolicy: Always
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /var/www/_vue
          name: assets

    - name: web
      image: "tuto-vue"
      lifecycle:
        postStart:
          exec:
            command:
              - cp
              - -R
              - /app/dist
              - /
      ports:
        - containerPort: 8080
      volumeMounts:
        - mountPath: /dist
          name: assets
