tuto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
    release: first-nginx
  ports:
    - name: http
      port: 80
